Revise About section with updated details
Updated personal information and achievements in the About section.

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                 <img src="images/about_img.jpeg" alt="Yashaswini Jawalkar" class="about_img">
             </div>
             <div class="about_data">
-                <p class="about_description">I am a First year MCA student with a passion for technology and a
+                <p class="about_description">I am a Second year MCA student with a passion for technology and a
                     desire to constantly improve my skills. I have always been fascinated by the endless
                     possibilities that technology offers and I am determined to be at the forefront of innovation. I
                     believe that hands-on experience is the best way to learn, and I am always looking for new
@@ -124,4 +124,5 @@
     </script>
     
 </body>
+
 </html>
