--- a/about.html
+++ b/about.html
@@ -10,6 +10,15 @@
 
     <link rel="stylesheet" href="style.css">
     <title>Mahesh Protfolio website</title>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W81XYQB8HP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-W81XYQB8HP');
+</script>
 </head>
 <body>
     <!-- =======header========== -->
@@ -126,3 +135,4 @@
 </body>
 
 </html>
+
