--- a/contact.html
+++ b/contact.html
@@ -118,23 +118,33 @@
      <script src="main.js"></script>
 
      <script>
-         const scriptURL = 'https://docs.google.com/spreadsheets/d/15cJ00BVmLWfEzCDbpmA32W4tPayH4yGkF3X8t_SS_AI/edit?usp=sharing'         
-         const form = document.forms['submit-to-google-sheet']
-         const msg = document.getElementById('msg')
-         form.addEventListener('submit', e => {
-             e.preventDefault()
-             fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                 .then(response => {
-                     msg.innerHTML = "Your Message Sent Successfully"
-                     setTimeout(function () {
-                         msg.innerHTML = ""
-                     }, 2000)
-                     form.reset()
-                 })
-                 .catch(error => console.error('Error!', error.message))
-         })
-     </script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwQlpQwMjjLLQXayX_CRDw04nt0Ezt3SW6A7Sgv5LAdrctoyWypfUQ3IgSsodxi2FkJ-Q/exec'
+  const form = document.forms['submit-to-google-sheet']
+  const msg = document.getElementById('msg')
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+
+    fetch(scriptURL, {
+      method: 'POST',
+      body: new FormData(form)
+    })
+    .then(response => {
+      msg.innerHTML = "Your Message Sent Successfully"
+      msg.style.color = "green"
+      setTimeout(() => msg.innerHTML = "", 3000)
+      form.reset()
+    })
+    .catch(error => {
+      msg.innerHTML = "Error sending message"
+      msg.style.color = "red"
+      console.error('Error!', error.message)
+    })
+  })
+</script>
+
 </body>
 
 </html>
+
 
