Update Google Tag Manager and fix HTML formatting
Updated Google Tag Manager ID and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <title>Mahesh Protfolio website</title>
     
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-W81XYQB8HP"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1P3RET0NET"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-W81XYQB8HP');
+  gtag('config', 'G-1P3RET0NET');
 </script>
 </head>
 <body>
@@ -108,6 +108,7 @@
 </body>
 
 </html>
+
 
 
 
